--- a/README
+++ b/README
@@ -1,14 +1,15 @@
-img : Minimalistic screenshot uploader for Linux
+# img
 
-img is a minimalistic bash script that uploads a screen selection to imgur.
-On success, it copies the image link to the clipboard and sounds a bell.
-On failure, it writes the curl output to /tmp/, where the image is also stored.
+## Minimalistic screenshot uploader for Linux
+
+img is a minimalistic bash script that uploads a **screen section** to imgur.
+On success, it copies the image link to the clipboard and notify.
+On failure, it writes the curl output to `/tmp/img_upload.png`, where the image is also stored and notify error.
 No output is produced.
 
-img depends on scrot, curl and xclip.
-You can use the following command to check dependencies:
-    for p in scrot curl xclip; do test $(command -v $p) && echo "Ok $p" || echo "No $p"; done
+img depends on **scrot**, **curl** and **xclip**.
 
 Recommended usage: Bind a key (such as PrtSc) to execute the script easily.
-Note: If you are using dwm, you will need to use the following patch for
-screen selections: http://dwm.suckless.org/patches/keypressrelease.
+
+forked from : https://github.com/Ceryn/img
+
